# INI_Parser

./: CMakeLists.txt  ini.h  inilib.cpp
example/: main.c
